Fix not to use text block (because the java version is old)